--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4000",
+    "start": "ng serve --port 80 --publicHost localhost.timoovies.com",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
